[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "fences-api"
dynamic = ["version", "dependencies"]
description = "Fences is an LLM augmented OpenAPI interpreter with a visual interface to easily make requests"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Leonardo Menezes", email = "leonardotmenezes@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
version = "0.1.0"
dependencies = [
    "annotated-types>=0.7.0",
    "anthropic>=0.34.1",
    "anyio>=4.4.0",
    "asttokens>=2.4.1",
    "blinker>=1.8.2",
    "certifi>=2024.8.30",
    "charset-normalizer>=3.3.2",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "decorator>=5.1.1",
    "distro>=1.9.0",
    "exceptiongroup>=1.2.2",
    "executing>=2.0.1",
    "filelock>=3.15.4",
    "Flask>=3.0.3",
    "fsspec>=2024.6.1",
    "h11>=0.14.0",
    "httpcore>=1.0.5",
    "httpx>=0.27.2",
    "huggingface-hub>=0.24.6",
    "idna>=3.8",
    "importlib_metadata>=8.4.0",
    "ipdb>=0.13.13",
    "ipython>=8.18.1",
    "itsdangerous>=2.2.0",
    "jedi>=0.19.1",
    "Jinja2>=3.1.4",
    "jiter>=0.5.0",
    "markdown-it-py>=3.0.0",
    "MarkupSafe>=2.1.5",
    "matplotlib-inline>=0.1.7",
    "mdurl>=0.1.2",
    "mermaid-py>=0.6.0",
    "packaging>=24.1",
    "parso>=0.8.4",
    "prompt_toolkit>=3.0.47",
    "pure_eval>=0.2.3",
    "pydantic>=2.8.2",
    "pydantic_core>=2.20.1",
    "Pygments>=2.18.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
    "rich>=13.8.0",
    "six>=1.16.0",
    "sniffio>=1.3.1",
    "stack-data>=0.6.3",
    "tokenizers>=0.20.0",
    "tomli>=2.0.1",
    "tqdm>=4.66.5",
    "traitlets>=5.14.3",
    "typing_extensions>=4.12.2",
    "urllib3>=2.2.2",
    "wcwidth>=0.2.13",
    "Werkzeug>=3.0.4",
    "zipp>=3.20.1",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/LTMenezes/fences"

[project.scripts]
fences = "fences.fences:main"

[tool.pdm]
version = { source = "file", path = "fences/__init__.py" }
dependencies = {file = ["requirements.txt"]}
distribution = true

[tool.pdm.build]
source-includes = [
    "requirements*.txt",
    ]


[tool.inline-snapshot]
# default-flags=["fix"]
# default-flags=["create"]
